unpackaged/main/default/objects/Catch__c/Catch__c.object-meta.xml
<CustomObject>
    <label>Catch</label>
    <nameField>
        <displayFormat>Catch-{0000000000}</displayFormat>
        <label>Nombre de Catch</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>