unpackaged/main/default/objects/Catch__c/fields/approvalObject_Buscar__c.field-meta.xml
<CustomField>
    <fullName>approvalObject_Buscar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>approvalObject</label>
    <referenceTo>approvalObject__c</referenceTo>
    <relationshipLabel>Catchs</relationshipLabel>
    <relationshipName>Catchs</relationshipName>
    <type>Lookup</type>
</CustomField>