unpackaged/main/default/objects/Catch__c/fields/Campo__c.field-meta.xml
<CustomField>
    <fullName>Campo__c</fullName>
    <label>Campo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>