unpackaged/main/default/objects/Catch__c/fields/Causa__c.field-meta.xml
<CustomField>
    <fullName>Causa__c</fullName>
    <label>Causa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>