unpackaged/main/default/objects/Catch__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <description>Descripción del error. Comunmente el mensaje del Catch y descripciones extras.</description>
    <label>Descripción</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>