unpackaged/main/default/objects/Catch__c/fields/Llave_Unica__c.field-meta.xml
<CustomField>
    <fullName>Llave_Unica__c</fullName>
    <externalId>true</externalId>
    <label>Llave Única</label>
    <length>255</length>
    <type>Text</type>
</CustomField>