unpackaged/main/default/objects/Catch__c/fields/Numero_de_Linea__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Linea__c</fullName>
    <label>Numero de Línea</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>