unpackaged/main/default/objects/Catch__c/fields/Registro_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Registro_Salesforce__c</fullName>
    <label>Registro Salesforce</label>
    <length>18</length>
    <type>Text</type>
</CustomField>