unpackaged/main/default/objects/Catch__c/fields/Registro_Salesforce_URL__c.field-meta.xml
<CustomField>
    <fullName>Registro_Salesforce_URL__c</fullName>
    <label>Registro Salesforce URL</label>
    <type>Url</type>
</CustomField>