unpackaged/main/default/objects/Catch__c/fields/SharePointObj_Buscar__c.field-meta.xml
<CustomField>
    <fullName>SharePointObj_Buscar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SharePointObj</label>
    <referenceTo>SharePointObj__c</referenceTo>
    <relationshipLabel>Catchs</relationshipLabel>
    <relationshipName>Catchs</relationshipName>
    <type>Lookup</type>
</CustomField>