unpackaged/main/default/objects/Catch__c/fields/URL_Record__c.field-meta.xml
<CustomField>
    <fullName>URL_Record__c</fullName>
    <label>URL Record</label>
    <type>Url</type>
</CustomField>