unpackaged/main/default/objects/Catch__c/fields/XML_SharePoint_Buscar__c.field-meta.xml
<CustomField>
    <fullName>XML_SharePoint_Buscar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>XML SharePoint</label>
    <referenceTo>XML_SharePoint__c</referenceTo>
    <relationshipLabel>Catchs</relationshipLabel>
    <relationshipName>Catchs</relationshipName>
    <type>Lookup</type>
</CustomField>