unpackaged/main/default/objects/Catch__c/fields/XML_Siebel_Buscar__c.field-meta.xml
<CustomField>
    <fullName>XML_Siebel_Buscar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>XML Siebel</label>
    <referenceTo>XML_Siebel__c</referenceTo>
    <relationshipLabel>Catchs</relationshipLabel>
    <relationshipName>Catchs</relationshipName>
    <type>Lookup</type>
</CustomField>