unpackaged/main/default/objects/Catch__c/recordTypes/AssertException.recordType-meta.xml
<RecordType>
    <fullName>AssertException</fullName>
    <active>true</active>
    <label>AssertException</label>
</RecordType>