unpackaged/main/default/objects/Catch__c/recordTypes/CallOut.recordType-meta.xml
<RecordType>
    <fullName>CallOut</fullName>
    <active>true</active>
    <description>Registros generados por errores de callout</description>
    <label>CallOut</label>
</RecordType>