unpackaged/main/default/objects/Catch__c/recordTypes/CallOutResponse.recordType-meta.xml
<RecordType>
    <fullName>CallOutResponse</fullName>
    <active>true</active>
    <description>Respuesta de Webservices no importa si son respuestas positivas o negativas CallOut</description>
    <label>CallOutResponse</label>
</RecordType>