unpackaged/main/default/objects/Catch__c/recordTypes/DmlException.recordType-meta.xml
<RecordType>
    <fullName>DmlException</fullName>
    <active>true</active>
    <description>Registros generados por Catch de DML</description>
    <label>DmlException</label>
</RecordType>