unpackaged/main/default/objects/Catch__c/recordTypes/Exception.recordType-meta.xml
<RecordType>
    <fullName>Exception</fullName>
    <active>true</active>
    <description>Generica</description>
    <label>Exception</label>
</RecordType>