unpackaged/main/default/objects/Catch__c/recordTypes/ListException.recordType-meta.xml
<RecordType>
    <fullName>ListException</fullName>
    <active>true</active>
    <label>ListException</label>
</RecordType>