unpackaged/main/default/objects/Catch__c/recordTypes/NullPointerException.recordType-meta.xml
<RecordType>
    <fullName>NullPointerException</fullName>
    <active>true</active>
    <label>NullPointerException</label>
</RecordType>