unpackaged/main/default/objects/Catch__c/recordTypes/QueryException.recordType-meta.xml
<RecordType>
    <fullName>QueryException</fullName>
    <active>true</active>
    <label>QueryException</label>
</RecordType>