unpackaged/main/default/objects/Catch__c/recordTypes/SObjectException.recordType-meta.xml
<RecordType>
    <fullName>SObjectException</fullName>
    <active>true</active>
    <label>SObjectException</label>
</RecordType>