unpackaged/main/default/objects/Catch__c/listViews/Nombre_de_flujo_no_valido.listView-meta.xml
<ListView>
    <fullName>Nombre_de_flujo_no_valido</fullName>
    <columns>NAME</columns>
    <columns>Causa__c</columns>
    <columns>StackTrace__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Causa__c</field>
        <operation>contains</operation>
        <value>Nombre de flujo no válido.</value>
    </filters>
    <label>XML Tiene Nombre de flujo no válido.</label>
</ListView>