unpackaged/main/default/objects/Catch__c/listViews/Todos1.listView-meta.xml
<ListView>
    <fullName>Todos1</fullName>
    <columns>NAME</columns>
    <columns>Causa__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>