unpackaged/main/default/objects/Catch__c/listViews/XML_No_tiene_Encabezado.listView-meta.xml
<ListView>
    <fullName>XML_No_tiene_Encabezado</fullName>
    <columns>NAME</columns>
    <columns>Causa__c</columns>
    <columns>StackTrace__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Causa__c</field>
        <operation>contains</operation>
        <value>encabezado</value>
    </filters>
    <label>XML No tiene Encabezado</label>
</ListView>